--- a/arch/riscv/boot/dts/sifive/fu740-c000.dtsi
+++ b/arch/riscv/boot/dts/sifive/fu740-c000.dtsi
@@ -140,6 +140,8 @@
 		#size-cells = <2>;
 		compatible = "simple-bus";
 		ranges;
+		cache-dma = "coherent";
+
 		plic0: interrupt-controller@c000000 {
 			#interrupt-cells = <1>;
 			#address-cells = <0>;
@@ -235,6 +237,7 @@
 		};
 		eth0: ethernet@10090000 {
 			compatible = "sifive,fu540-c000-gem";
+			dma-coherent;
 			interrupt-parent = <&plic0>;
 			interrupts = <55>;
 			reg = <0x0 0x10090000 0x0 0x2000>,
