--- a/arch/riscv/boot/dts/starfive/jh7100.dtsi
+++ b/arch/riscv/boot/dts/starfive/jh7100.dtsi
@@ -108,6 +108,8 @@
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
+		cache-dma = "uncached-offset";
+		cache-dma-uncached-offset = <0xF 0x80000000>;
 
 		dtim: dtim@1000000 {
 			compatible = "starfive,dtim0";
