--- a/arch/riscv/boot/dts/allwinner/sun20i-d1.dtsi
+++ b/arch/riscv/boot/dts/allwinner/sun20i-d1.dtsi
@@ -72,6 +72,11 @@
 		clock-output-names = "osc24M";
 	};
 
+        memory {
+                device_type = "memory";
+                reg = <0x40000000 0x40000000>; /* 1GB */
+        };
+
 	// FIXME: depends on what T-HEAD tries to upstream.
 	pmu {
 		compatible = "thead,c900-pmu";
